# voice-cld

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  chat_2026-01-04.md  pyproject.toml
src/: __init__.py  batch.py  cli.py  search.py  transcriber.py  vectorstore.py  watcher.py
src/utils/: __init__.py  audio.py  embeddings.py  formats.py  metadata.py
tests/: __init__.py  test_transcriber.py
